--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,6 +6,11 @@ readme = "README.md"
 requires-python = ">=3.12"
 dependencies = [
     "aiogram>=3.20.0.post0",
+    "faiss-cpu>=1.12.0",
+    "langchain-community>=0.4.1",
+    "langchain-core>=1.0.4",
+    "langchain-openai>=1.0.2",
+    "langchain-text-splitters>=1.0.0",
     "openai>=1.81.0",
     "python-dotenv>=1.1.0",
 ]
